# DeskList

./: .gitignore  CODEX_PROMPT.md  DEVELOPMENT.md  README.md  index.html  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  floating.json
src-tauri/icons/desklist/: icon.icns
src-tauri/src/: lib.rs
src/components/: AppHeader.vue  ConfirmDialog.vue  FloatingTaskItem.vue  FloatingWindow.vue  ListSidebar.vue  QuickAdd.vue  SettingsView.vue  TaskItem.vue  TaskList.vue  ToastContainer.vue
src/composables/: useToast.ts  useTodoStore.test.ts  useTodoStore.ts  useWindowControls.ts
src/services/: autostartService.ts  importExportService.test.ts  importExportService.ts  shortcutService.ts  storageService.test.ts  storageService.ts
src/styles/: global.css  reset.css  variables.css
src/types/: todo.ts
src/utils/: debounce.ts  sorting.ts  validation.test.ts  validation.ts
